# test_2024

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: ci-cd.yaml
app/: applications.py  bootstrap.py  settings.py
app/models/: product.py  tast.py  user.py
app/orm_models/: __init__.py  order.py  order_product.py  post.py  product.py  productsorm.py  profile.py  task.py  user.py  uuid_mixin.py
app/repositories/: product_repository.py  task_repository.py  user_repository.py
app/routers/: login_handler.py  login_router.py  product_router.py  task_router.py  user_router.py
app/services/: RENAME_.py  product_service.py  task_service.py  user_service.py
app/settings/: base.conf
app/utils/: auth.py  db.py  hasher.py  pagination.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 17490bd60141_add_profile.py  2024_09_15_1430-5dff8e67db62_init.py  2024_09_15_1754-c95e60eadc4d_edit_modelorm_user.py  2024_09_19_0022-8ef4f151ae2b_initial_migration.py  2f1b13f30511_add_task.py  318547684716_add_products.py  3d1812f9e8b2_fix_cascase_delete.py  92c7cdd031bc_add_user.py
