[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["Erofeev Nikita <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.8.0"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
uvicorn = "^0.30.6"
pyhocon = "^0.3.61"
punq = "^0.7.0"
orjson = "^3.10.7"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pytest = "^8.3.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    '*/migrations/*',
    'grafana-dashboard.json',
    'grafana-dashboard.json',
    '*/docker/*',
    'prometheus.yml',
    '*/venv/*',
    '*/env/*',
]



[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|grafana-dashboard\\.json
|\\*/docker/\\*
|prometheus\\.yml
|venv
|env
'''

[tool.flake8]
max-line-length = 120
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|grafana-dashboard\\.json
|\\*/docker/\\*
|prometheus\\.yml
|venv
|env
'''
#exclude = '''
#/(
#    \.git
#  | __pycache__
#  | \.yml\.enc
#  | \*/migrations/\*
#  | grafana-dashboard\.json
#  | \*/docker/\*
#  | prometheus\.yml
#)/
#'''

